examples/022-Grafana/grafana-playbooks/grafana-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service-ingress
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.singleton.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "grafana-service-ingress"
            port:
              number: 3000
